# gr4-playground

./: Dockerfile  README.md
backend/: CMakeLists.txt  baseline.cpp  main.cpp  main.hpp
backend/cmake/: CompileGr4Release.cmake  Dependencies.cmake
frontend/: index.html  script.js
